# abaq_api

./: Cargo.toml
abaq_methods/: Cargo.toml
abaq_methods/src/: lib.rs
abaq_methods/src/interpolation/: methods.rs  mod.rs  utilities.rs
abaq_methods/src/linear_equations/: methods.rs  utilities.rs
abaq_methods/src/root_finding/: methods.rs  mod.rs  register.rs  utilities.rs
src/: main.rs
