[package]
name = "abaq_api"
version = "0.1.0"
authors = ["David Calle Daza <dcalled1@eafit.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abaq_methods = {path="abaq_methods"}
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.111"
ndarray = {version = "0.13.1", features = ["serde"]}
ndarray-linalg = "0.12.0"