[package]
name = "abaq_methods"
version = "0.1.0"
authors = ["David Calle Daza <dcalled1@eafit.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.11"
nalgebra = "0.21"
ndarray = {version = "0.13.1", features = ["rayon"]}
ndarray-linalg = { version = "0.12", features = ["intel-mkl"] }
meval = "0.2.0"